src/test/AmbiguousField3/AmbiguousField3.expected
error: AmbiguousField3.panda:16:24: reference to 'length' is ambiguous, both field length (of type panda.core.Int32) and function length() match
1 error
