src/test/AmbiguousField3/AmbiguousField3.panda
================================================================================
The reference to "t.length" is ambiguous because the class has both a field 
and a no-arg function by that name. Outside of the class with both field and
function visible, we should complain about ambiguity.
================================================================================
class AmbiguousField3 {
    var length:Int := 5

    function length():Int {
        return length
    }
}

method main() {
    var t := new AmbiguousField3()
    Console.writeLine(t.length)
}